--- a/stylenav.css
+++ b/stylenav.css
@@ -14,6 +14,10 @@ header{
     background-color: lightgreen;
     padding: 28px 1rem;
 }
+.main a i{
+  display: flex;
+  justify-content: center;
+}
 
 .logo{
     display: flex;
@@ -43,18 +47,62 @@ img{
     margin: 0 30px;
     transition: all.50s ease;
 }
+.navbar nav ul{
+  display: flex;
+  
+}
+nav {
+  width: 100%; /* Set the width of the navbar */
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; /* Align items to the center */
+}
+
+nav ul li {
+  margin-right: 20px; /* Adjust as needed */
+}
+
+nav ul li:last-child {
+  margin-right: 0;
+}
+
+nav ul li a {
+  text-decoration: none;
+  padding: 10px; /* Add padding around the items */
+}
+
+nav ul li a i {
+  margin-left: 5px; /* Adjust as needed */
+  font-size: 20px; /* Adjust icon size */
+}
+
 .navbar a:hover{
     color: blue;
 }
 .navbar a.active{
-    color: ;
+    color: blueviolet;
+}
+.banner-content.hero-content{
+  display: flex;
+  border-radius: 1rem;
+  flex-wrap: wrap;
+  align-items: center; /* Align content vertically */
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
 }
 /* Css for search box */
 .search-container {
     margin-top: 50px; /* Adjust the margin as needed */
     display: flex; /* Align form elements horizontally */
     text-align: center;
-    align-items: center;
+    align-items: baseline;
     justify-content: center;
     width: 100%;
   }
@@ -176,9 +224,11 @@ img{
       display: flex;
       flex-direction: row;
     }
-    section.hero{
-      height: 150px;;
+    .hero{
+      height: 150px;
+      
     }
+    
     .card-container{
       align-items: center;
       justify-content: center;
@@ -201,7 +251,7 @@ img{
     background-color: #f0f0f0;
   }
   
-  .hero {
+  .banner-content {
     height: 75vh; /* Set height to 100 viewport height */
     background-image: linear-gradient(rgba(14, 50, 0, 0.8), rgba(16, 50, 0, 0.8)), url(sunflower.jpg);/* Replace with your image path */
     background-size: cover;
@@ -210,11 +260,15 @@ img{
     justify-content: center;
     align-items: center;
     margin-bottom: 8px;
+    margin-top: auto;
+    border-radius: 1rem;
   }
   
   .hero-content {
     text-align: center;
     color: white; /* Text color will be visible on your image background */
+    align-items: center;
+    margin-top: auto;
   }
   
   .hero-content h1 {
